[package]
name = "vcheat"
version = "0.5.2"
authors = ["vSylva"]
edition = "2021"
description = "Hacking Library"
readme = "README.md"
license = "MIT"
repository = "https://github.com/vSylva/vcheat"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
