[package]
name = "vcheat"
version = "0.6.6"
authors = ["sylvavv"]
edition = "2021"
description = "Hacking Library"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sylvavv/vcheat"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-gnu",
    "i686-pc-windows-gnu",
]
